# cuda-lab

./: .gitignore  1  GPU-DRIVER-ISSUE-REPORT.md  LEARNING-TRACKS.md  README.md  changes.patch  mkdocs.yml  pyrightconfig.json  pytest.ini  verify_cuda.py
benchmarks/: README.md
blog-templates/: BLOG-POST-TEMPLATE.md  BLOG-SERIES-PLAN.md  README.md
bootcamp/: README.md
bootcamp/phase0/week01/day1-cmake-basics/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week01/day1-cmake-basics/src/: hello_gpu.cu
bootcamp/phase0/week01/day2-compiler-flags/: CMakeLists.txt  README.md
bootcamp/phase0/week01/day2-compiler-flags/experiments/: compare_O0_vs_O3.sh  multi_arch_build.sh  profile_with_lineinfo.sh
bootcamp/phase0/week01/day2-compiler-flags/src/: vector_add.cu
bootcamp/phase0/week01/day3-ptx-sass/: CMakeLists.txt  README.md
bootcamp/phase0/week01/day3-ptx-sass/analysis/: sass_annotations.md
bootcamp/phase0/week01/day3-ptx-sass/scripts/: compare_versions.sh  extract_ptx.sh  extract_sass.sh
bootcamp/phase0/week01/day3-ptx-sass/src/: simple_add.cu
bootcamp/phase0/week01/day5-roofline/: CMakeLists.txt  README.md
bootcamp/phase0/week01/day5-roofline/analysis/: my_gpu_data.csv  plot_roofline.py
bootcamp/phase0/week01/day5-roofline/src/: bandwidth_test.cu  compute_test.cu  example_kernels.cu  main.cu
bootcamp/phase0/week02/day1-compute-sanitizer/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week02/day1-compute-sanitizer/src/: race_example.cu  race_fixed.cu
bootcamp/phase0/week02/day2-memcheck/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week02/day2-memcheck/src/: memory_errors.cu  memory_fixed.cu  memory_leaks.cu
bootcamp/phase0/week02/day3-cuda-gdb/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week02/day3-cuda-gdb/src/: debug_example.cu  debug_reduction.cu
bootcamp/phase0/week02/day4-error-handling/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week02/day4-error-handling/src/: async_errors.cu  error_patterns.cu
bootcamp/phase0/week02/day6-integration/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week02/day6-integration/include/: debug_utils.cuh
bootcamp/phase0/week02/day6-integration/src/: buggy_app.cu  debugged_app.cu
bootcamp/phase0/week03/day2-memory-metrics/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week03/day2-memory-metrics/src/: bandwidth_test.cu  memory_patterns.cu
bootcamp/phase0/week03/day5-bottleneck-analysis/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week03/day5-bottleneck-analysis/src/: bottleneck_demo.cu  optimization_examples.cu
bootcamp/phase0/week04/day1-single-file/: CMakeLists.txt  README.md  build.sh  main.cu
bootcamp/phase0/week04/day2-library/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week04/day2-library/examples/: example.cpp
bootcamp/phase0/week04/day2-library/include/mylib/: kernels.cuh  mylib.h
bootcamp/phase0/week04/day2-library/src/: kernels.cu  mylib.cu
bootcamp/phase0/week04/day3-application/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week04/day3-application/include/app/: config.h  cuda_ops.cuh  utils.h
bootcamp/phase0/week04/day3-application/src/: config.cpp  cuda_ops.cu  main.cpp
bootcamp/phase0/week04/day4-benchmark/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week04/day4-benchmark/include/benchmark/: benchmark.h  implementations.cuh  stats.h
bootcamp/phase0/week04/day4-benchmark/src/: benchmark.cpp  implementations.cu  main.cpp
bootcamp/phase0/week04/day5-testing/: CMakeLists.txt  README.md  build.sh
bootcamp/phase0/week04/day5-testing/include/test/: assertions.h  cuda_test.cuh  test_framework.h
bootcamp/phase0/week04/day5-testing/src/: cuda_test.cu  main.cpp  test_framework.cpp
bootcamp/phase0/week04/day5-testing/tests/: test_reduction.cpp  test_vector_ops.cpp
bootcamp/phase0/week04/day6-complete/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
bootcamp/phase0/week04/day6-complete/app/: main.cpp
bootcamp/phase0/week04/day6-complete/benchmarks/: bench_main.cpp
bootcamp/phase0/week04/day6-complete/docs/: README.md
bootcamp/phase0/week04/day6-complete/examples/: simple_example.cpp
bootcamp/phase0/week04/day6-complete/include/myproject/: cuda_utils.cuh  myproject.h  timer.h
bootcamp/phase0/week04/day6-complete/src/: cuda_utils.cu  myproject.cu
bootcamp/phase0/week04/day6-complete/tests/: test_main.cpp
bootcamp/phase1/week05/day2-indexing/: CMakeLists.txt  README.md  build.sh  index_1d.cu  index_2d.cu  index_3d.cu
bootcamp/phase1/week05/day3-grid-stride/: CMakeLists.txt  README.md  build.sh  grid_stride_demo.cu  large_array.cu
bootcamp/phase1/week05/day5-launch-config/: CMakeLists.txt  README.md  build.sh  launch_config.cu  occupancy_demo.cu
bootcamp/phase1/week06/day3-shared-memory/: CMakeLists.txt  README.md  block_reduction.cu  build.sh  shared_basics.cu
bootcamp/phase1/week06/day5-registers/: CMakeLists.txt  README.md  build.sh  register_demo.cu  spill_demo.cu
bootcamp/phase1/week07/day1-vector-ops/: CMakeLists.txt  README.md  build.sh  saxpy.cu  vector_add.cu
bootcamp/phase1/week07/day3-reduction/: CMakeLists.txt  README.md  build.sh  cub_reduction.cu  dot_product.cu  reduction.cu
bootcamp/phase1/week07/day4-scan/: CMakeLists.txt  README.md  build.sh  scan_demo.cu  stream_compact.cu
bootcamp/phase1/week07/day6-matmul/: CMakeLists.txt  README.md  build.sh  matmul.cu
bootcamp/phase2/week09/day3-compute-throughput/: CMakeLists.txt  README.md  build.sh  compute_bound.cu  flops_test.cu
bootcamp/phase2/week12/day5-compute-latency-hiding/: CMakeLists.txt  README.md  build.sh  compute_latency.cu
bootcamp/phase3/week14/day1-cublas-basics/: CMakeLists.txt  README.md  build.sh  cublas_basics.cu
bootcamp/phase3/week14/day2-cublas-advanced/: CMakeLists.txt  README.md  build.sh  cublas_advanced.cu
cuda-programming-guide/: index.md
data-pipelines/: README.md
distributed-training/: README.md
docs/: ADVANCED-TOPICS-ENHANCEMENT.md  CURRICULUM-ENHANCEMENT-PLAN.md  NESAP-ALIGNED-ENHANCEMENT-PLAN.md  NESAP-IMPLEMENTATION-SUMMARY.md  (+2 more)
(+1492 files in other folders)
